--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,8 +19,8 @@ jobs:
           filename: github-metrics.svg
 
           # Authentication
-          token: ${{ secrets.METRICS_BOT_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
+          #committer_token: ${{ secrets.GITHUB_TOKEN }}
 
           # Limit default blocks
           base: "header, repositories"
