--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,4 +16,37 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          # The file to render to
+          filename: github-metrics.svg
+
+          # Authentication
           token: ${{ secrets.METRICS_TOKEN }}
+          #committer_token: ${{ secrets.GITHUB_TOKEN }}
+
+           # Show errors for blocks that can't be rendered
+          plugin_errors_fatal: yes
+
+          # Lines Plugin
+          plugin_lines: yes
+
+          # Languages Plugin
+          plugin_languages: yes
+
+          # Topics Plugin
+          plugin_topics: yes
+          plugins_topics_mode: mastered
+
+          # Stars Plugin
+          plugin_stars: yes
+          plugin_stars_limit: 4
+
+          # Order blocks
+          config_order: base.header, base.repositories, lines, stars, languages, topics
+
+          # Timezone for header (or calendar)
+          config_timezone: America/Mountain
+
+          # Padding for the rendered image
+          config_padding: 10%
+
+          
